Fixed z-index on loading spinner

--- a/bookshelf-client/src/components/Ui/Spinners/LoadingSpinner.scss
+++ b/bookshelf-client/src/components/Ui/Spinners/LoadingSpinner.scss
@@ -53,6 +53,7 @@
 	justify-content: center;
 	background-color: rgba(255, 255, 255, 0.85);
 	border-radius: 5px;
+	z-index: 10;
 }
 
 .loading-spinner__spinner-element {
